# Parallel_BFS

./: CMakeLists.txt  README.md
header/: GraphManager.h  ParallelBFS.h  ParallelComputations.h  SequentialBFS.h  utils.h
source/: GraphManager.cpp  ParallelBFS.cpp  SequentialBFS.cpp  utils.cpp
tests/: Benchmark.cpp  GraphManagerTester.cpp  ParallelBFSTester.cpp  SequentialBFSTester.cpp
